samples/errors/invalid-for-range-head.fls
for i 10 a
    console.log(i)
console.log(10)
